name:                recipes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/recipes#readme
license:             BSD3
license-file:        LICENSE.txt
author:              Ben Steinberg
maintainer:          ben@potswift.org
copyright:           2018 Ben Steinberg
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Recipes
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , text
                     , yaml
  default-language:    Haskell2010

executable recipes
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , recipes
  default-language:    Haskell2010

executable recipes-psGenerator
  hs-source-dirs:      app
  main-is:             PSGenerator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , recipes
                     , purescript-bridge
                     , servant-purescript
  default-language:    Haskell2010

test-suite recipes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , recipes
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/recipes
